# microDNA-Detection-and-Analysis

./: .gitignore  LICENSE  README.md  circles_igv_session_chr1.xml  commands.txt  environment.yml  fijiREADME.md  igv_session_chr1.xml  pyproject.toml  requirements.txt  windowsREADME.md
data/: SRR413969.eccdna.cleaned.bed  ecc_protein_genes.txt
data/results/: SRR413969.eccdna.annotated.tsv
docker/: Dockerfile.circlemap  Dockerfile.microdna  cleanup_pipeline.sh  docker-compose.yml  run_alignment.sh  run_downstream_pipeline.sh  run_full_pipeline.sh  run_upstream_pipeline.sh  setup_chr22_test.sh  setup_data.sh
results/: analysis_summary.txt  basic_analysis.ipynb  eccdna_analysis.py
src/: clean_bed.py  get_seq.py  get_soft_clips.py  microDNA.py
src/microdna/: annotate_eccdna_closest.py  annotate_eccdna_intersected.py  clean_bed.py  cleaner_tsv.py  eccdna_length_distribution.py  eccdna_score_distribution.py  get_seq.py  get_soft_clips.py  gtf_parser.py  microDNA.py  parse_intersected.py  plotting.py  print_soft_clipped_reads.py  sw.py  unique_eccdna_table.py
src/utils/: annotate_eccdna_closest.py  annotate_eccdna_genes.py  annotate_eccdna_intersected.py  clean_bed.py  ecc_dna_distribution.py  print_soft_clipped_reads.py
src/utils/py_scripts/: annotate_eccdna_closest.py  annotate_eccdna_intersected.py  clean_bed.py  clean_tsv.py  cleaner_tsv.py  create_gene_table.py  eccdna_length_distribution.py  eccdna_score_distribution.py  get_seq.py  microDNA.py  (+2 more)
tests/: conftest.py  test_cli.py  test_microDNA.py
useful_commands/: shell_script_executor.md
(+11 files in other folders)
